theme cleanup, basic mockup

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="{{root}}/css/app.css">
     <link rel="stylesheet" type="text/css" href="{{root}}/css/main.css">
@@ -19,11 +20,10 @@
 
 <body>
 
-    {{> pageloader}}
+    <!-- {{> pageloader}} -->
     {{> body}}
     {{> footer}}
     {{> backtotop}}
-    {{> sidebar}}
 
     <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
     <script src="./js/bundle.js"></script>
