--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,39 +9,12 @@
             <div class="column">
                 <div class="footer-column">
                     <div class="footer-header">
-                        <h3>Product</h3>
+                        <h3>More info</h3>
                     </div>
                     <ul class="link-list">
-                        <li><a href="#">Discover features</a></li>
-                        <li><a href="#">Why choose our Product ?</a></li>
-                        <li><a href="#">Compare features</a></li>
-                        <li><a href="#">Our Roadmap</a></li>
-                        <li><a href="#">Request features</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="column">
-                <div class="footer-column">
-                    <div class="footer-header">
-                        <h3>Docs</h3>
-                    </div>
-                    <ul class="link-list">
-                        <li><a href="#">Get Started</a></li>
-                        <li><a href="#">User guides</a></li>
-                        <li><a href="#">Admin guide</a></li>
-                        <li><a href="#">Developers</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="column">
-                <div class="footer-column">
-                    <div class="footer-header">
-                        <h3>Blogroll</h3>
-                    </div>
-                    <ul class="link-list">
-                        <li><a href="#">Latest News</a></li>
-                        <li><a href="#">Tech articles</a></li>
-                        <li><a href="#">Video Blog</a></li>
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">Terms of service</a></li>
+                        <li><a href="#">Privacy policy</a></li>
                     </ul>
                 </div>
             </div>
@@ -73,10 +46,6 @@
                                 </a>
                             </div>
                         </nav>
-
-                        <a href="https://bulma.io" target="_blank">
-                            <img src="/img/logo/made-with-bulma.png" alt="Made with Bulma" width="128" height="24">
-                        </a>
                     </div>
                 </div>
             </div>
