--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -12,6 +12,9 @@ Hero styles
     }
 
     .title {
+        font-family: 'Baloo Da 2', cursive !important;
+        font-size: 5rem;
+        color: $primary;
         &.is-bold {
             font-weight: 700;
         }
