--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
         <div class="columns">
             <div class="column">
                 <div class="footer-logo">
-                    <img src="/img/logo/fresh-white-alt.svg">
+                    <img src="/img/illustrations/sun.svg" alt="" width="112" height="28"><h3>Vedran</h3>
                 </div>
             </div>
             <div class="column">
@@ -24,22 +24,22 @@
                         <h3>Follow Us</h3>
                         <nav class="level is-mobile">
                             <div class="level-left">
-                                <a class="level-item" href="https://github.com/#">
+                                <a class="level-item" target="_blank" href="https://github.com/NodeFactoryIo">
                                     <span class="icon">
                                         <ion-icon name="logo-github" size="large"></ion-icon>
                                     </span>
                                 </a>
-                                <a class="level-item" href="https://facebook.com/#">
+                                <a class="level-item" target="_blank" href="https://www.facebook.com/nodefactoryio/">
                                     <span class="icon">
                                         <ion-icon name="logo-facebook" size="large"></ion-icon>
                                     </span>
                                 </a>
-                                <a class="level-item" href="https://google.com/#">
+                                <a class="level-item" target="_blank" href="https://twitter.com/nodefactoryio">
                                     <span class="icon">
-                                        <ion-icon name="logo-google" size="large"></ion-icon>
+                                        <ion-icon name="logo-twitter" size="large"></ion-icon>
                                     </span>
                                 </a>
-                                <a class="level-item" href="https://linkedin.com/#">
+                                <a class="level-item" target="_blank" href="https://www.linkedin.com/company/nodefactory/">
                                     <span class="icon">
                                         <ion-icon name="logo-linkedin" size="large"></ion-icon>
                                     </span>
