--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -3,10 +3,22 @@
     <div class="container">
         <div class="navbar-brand">
             <a class="navbar-item" href=#>
-                <img src="/img/logo/fresh-alt.svg" alt="" width="112" height="28">
+                <h3>Vedran</h3><img src="/img/illustrations/sun.svg" alt="" width="112" height="28">
             </a>
+            <div class="navbar-burger" @click="openMobileMenu()">
+                <span class="menu-toggle">
+                    <span class="icon-box-toggle" :class="{
+                            'active': mobileOpen,
+                            '': !mobileOpen
+                        }">
+                        <span class="rotate">
+                            <i class="icon-line-top"></i>
+                            <i class="icon-line-center"></i>
+                            <i class="icon-line-bottom"></i>
+                        </span>
+                    </span>
+            </div>
         </div>
-
         <div id="navbar-menu" class="navbar-menu is-static" :class="{
                 'is-active': mobileOpen,
                 '': !mobileOpen
