--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -6,8 +6,8 @@ $white: #fff;
 $smoke-white: #fcfcfc;
 $grey-white: #f2f2f2;
 
-$primary: #4FC1EA;
-$secondary: #F39200;
+$primary: #7AC9F0;
+$secondary: #F3D500;
 $accent: #00efb7;
 
 $fade-grey: #ededed;
