terms, privacy, links

--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -2,7 +2,7 @@
     aria-label="main navigation">
     <div class="container">
         <div class="navbar-brand">
-            <a class="navbar-item" href=#>
+            <a class="navbar-item" href="/">
                 <h3>Vedran</h3><img src="/img/illustrations/sun.svg" alt="" width="112" height="28">
             </a>
             <div class="navbar-burger" @click="openMobileMenu()">
@@ -25,13 +25,13 @@
             }">
 
             <div class="navbar-end">
-                <a href="#" class="navbar-item is-secondary">
+                <a href="#features" class="navbar-item is-secondary">
                     Features
                 </a>
-                <a href="#" class="navbar-item is-secondary">
+                <a href="#about" class="navbar-item is-secondary">
                     About
                 </a>
-                <a href="#" class="navbar-item is-secondary modal-trigger" data-modal="auth-modal">
+                <a href="#setupInstructions" class="navbar-item is-secondary modal-trigger" data-modal="auth-modal">
                     Setup instructions
                 </a>
             </div>
