--- a/src/scss/layout/_responsive.scss
+++ b/src/scss/layout/_responsive.scss
@@ -233,3 +233,12 @@ Responsive Styles
         }
     }
 }
+@media only screen and (min-width: 1024px) and (orientation: landscape) {
+    .navbar {
+        .navbar-brand {
+            .navbar-burger {
+               display: none;
+            }
+        }
+    }
+}
