--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,3 +19,4 @@ Main SCSS file / Fresh
 @import 'components/testimonials';
 @import 'utilities/utils';
 @import 'layout/responsive';
+@import 'layout/terms';
