--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -12,9 +12,9 @@
                         <h3>More info</h3>
                     </div>
                     <ul class="link-list">
-                        <li><a href="#">Support</a></li>
-                        <li><a href="#">Terms of service</a></li>
-                        <li><a href="#">Privacy policy</a></li>
+                        <li><a target="_blank" href="https://discord.gg/SpJuprhS7A">Support</a></li>
+                        <li><a href="/terms.html">Terms of service</a></li>
+                        <li><a href="/privacy.html">Privacy policy</a></li>
                     </ul>
                 </div>
             </div>
