--- a/src/partials/setupInstructions.html
+++ b/src/partials/setupInstructions.html
@@ -1,4 +1,4 @@
-<section class="section setup is-medium  has-background-image" data-background="/img/illustrations/background-sky.jpg" data-color="#4FC1EA" data-color-opacity=".6">
+<section id="setupInstructions" class="section setup is-medium  has-background-image" data-background="/img/illustrations/background-sky.jpg" data-color="#4FC1EA" data-color-opacity=".6">
     <div class="container">
         <div class="title-wrapper has-text-centered">
             <h2 class="title is-2 light-text is-spaced pb-40">Setup instructions</h2>
