--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -7,6 +7,7 @@ $smoke-white: #fcfcfc;
 $grey-white: #f2f2f2;
 
 $primary: #7AC9F0;
+$primary-background: #D3E7F0;
 $secondary: #F3D500;
 $accent: #00efb7;
 
