some content changes

--- a/src/partials/setupInstructions.html
+++ b/src/partials/setupInstructions.html
@@ -17,7 +17,7 @@
         <div id="windowsContainer" class="content-tab is-active">
             <div class="box">
                 <h1>Windows</h1>
-                <h3 class="subtitle is-5">Load balancer</h3>
+                <h3 class="subtitle is-5">Vedran Load Balancer</h3>
                 <ul>    
                     <li><span class="step">1.</span> Download latest release from: <a target="_blank" href="https://github.com/NodeFactoryIo/vedran-daemon/releases" >Github</a></li>
                     <li><span class="step">2.</span>Create polkadot account - <a target="_blank" href="https://wiki.polkadot.network/docs/en/learn-account-generation">wiki.polkadot.network/docs/en/learn-account-generation</a></li>
@@ -29,7 +29,7 @@
                     </li>
                     <li><span class="step">4.</span> Use <span class="code">--help</span> for additional configuration and flags</li>
                 </ul>
-                <h3 class="subtitle is-5">Node</h3>
+                <h3 class="subtitle is-5">Vedran Daemon</h3>
                 <ul>
                     <li><span class="step">1.</span> Download latest release: <a href="https://github.com/NodeFactoryIo/vedran-daemon/releases">github.com/NodeFactoryIo/vedran-daemon/releases</a></li>
                     <li class="codeContainer">
@@ -45,7 +45,7 @@
         <div id="linuxContainer" class="content-tab" style="display: none">
             <div class="box">
                 <h1>Linux</h1>
-                <h3 class="subtitle is-5">Load balancer</h3>
+                <h3 class="subtitle is-5">Vedran  Load Balancer</h3>
                 <ul>    
                     <li><span class="step">1.</span> Download latest release from: <a target="_blank" href="https://github.com/NodeFactoryIo/vedran-daemon/releases" >Github</a></li>
                     <li><span class="step">2.</span>Create polkadot account - <a target="_blank" href="https://wiki.polkadot.network/docs/en/learn-account-generation">wiki.polkadot.network/docs/en/learn-account-generation</a></li>
@@ -57,7 +57,7 @@
                     </li>
                     <li><span class="step">4.</span> Use <span class="code">--help</span> for additional configuration and flags</li>
                 </ul>
-                <h3 class="subtitle is-5">Node</h3>
+                <h3 class="subtitle is-5">Vedran Daemon</h3>
                 <ul>
                     <li><span class="step">1.</span> Download latest release: <a href="https://github.com/NodeFactoryIo/vedran-daemon/releases">github.com/NodeFactoryIo/vedran-daemon/releases</a></li>
                     <li class="codeContainer">
@@ -73,7 +73,7 @@
         <div id="macContainer" class="content-tab" style="display: none">
             <div class="box">
                 <h1>Mac</h1>
-                <h3 class="subtitle is-5">Load balancer</h3>
+                <h3 class="subtitle is-5">Vedran Load Balancer</h3>
                 <ul>    
                     <li><span class="step">1.</span> Download latest release from: <a target="_blank" href="https://github.com/NodeFactoryIo/vedran-daemon/releases" >Github</a></li>
                     <li><span class="step">2.</span>Create polkadot account - <a target="_blank" href="https://wiki.polkadot.network/docs/en/learn-account-generation">wiki.polkadot.network/docs/en/learn-account-generation</a></li>
@@ -85,7 +85,7 @@
                     </li>
                     <li><span class="step">4.</span> Use <span class="code">--help</span> for additional configuration and flags</li>
                 </ul>
-                <h3 class="subtitle is-5">Node</h3>
+                <h3 class="subtitle is-5">Vedran Daemon</h3>
                 <ul>
                     <li><span class="step">1.</span> Download latest release: <a href="https://github.com/NodeFactoryIo/vedran-daemon/releases">github.com/NodeFactoryIo/vedran-daemon/releases</a></li>
                     <li class="codeContainer">
