--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,7 @@ Main SCSS file / Fresh
 @import 'components/cards';
 @import 'components/forms';
 @import 'components/testimonials';
+@import 'components/tabs';
 @import 'utilities/utils';
 @import 'layout/responsive';
 @import 'layout/terms';
