--- a/src/scss/layout/_responsive.scss
+++ b/src/scss/layout/_responsive.scss
@@ -245,3 +245,8 @@ Responsive Styles
         }
     }
 }
+@media only screen and (max-width: 840px) {
+    #loadBalancerWrapper{
+        overflow-x: scroll;
+    }
+}
