--- a/src/partials/setupInstructions.html
+++ b/src/partials/setupInstructions.html
@@ -19,8 +19,8 @@
                 <h1>Windows</h1>
                 <h3 class="subtitle is-5">Vedran Load Balancer</h3>
                 <ul>    
-                    <li><span class="step">1.</span> Download latest release from: <a target="_blank" href="https://github.com/NodeFactoryIo/vedran-daemon/releases" >Github</a></li>
-                    <li><span class="step">2.</span>Create polkadot account - <a target="_blank" href="https://wiki.polkadot.network/docs/en/learn-account-generation">wiki.polkadot.network/docs/en/learn-account-generation</a></li>
+                    <li><span class="step">1.</span> Download latest release from: <a target="_blank" href="https://github.com/NodeFactoryIo/vedran/releases" >Github</a></li>
+                    <li><span class="step">2.</span>Create polkadot account - <a target="_blank" href="https://wiki.polkadot.network/docs/en/learn-account-generation">wiki.polkadot.network</a></li>
                     <li class="codeContainer">
                         <span class="step">3.</span>
                         <div class="code">
@@ -31,7 +31,7 @@
                 </ul>
                 <h3 class="subtitle is-5">Vedran Daemon</h3>
                 <ul>
-                    <li><span class="step">1.</span> Download latest release: <a href="https://github.com/NodeFactoryIo/vedran-daemon/releases">github.com/NodeFactoryIo/vedran-daemon/releases</a></li>
+                    <li><span class="step">1.</span> Download latest release: <a href="https://github.com/NodeFactoryIo/vedran-daemon/releases">Github</a></li>
                     <li class="codeContainer">
                         <span class="step">2.</span>
                         <div class="code">
@@ -47,8 +47,8 @@
                 <h1>Linux</h1>
                 <h3 class="subtitle is-5">Vedran  Load Balancer</h3>
                 <ul>    
-                    <li><span class="step">1.</span> Download latest release from: <a target="_blank" href="https://github.com/NodeFactoryIo/vedran-daemon/releases" >Github</a></li>
-                    <li><span class="step">2.</span>Create polkadot account - <a target="_blank" href="https://wiki.polkadot.network/docs/en/learn-account-generation">wiki.polkadot.network/docs/en/learn-account-generation</a></li>
+                    <li><span class="step">1.</span> Download latest release from: <a target="_blank" href="https://github.com/NodeFactoryIo/vedran/releases" >Github</a></li>
+                    <li><span class="step">2.</span>Create polkadot account - <a target="_blank" href="https://wiki.polkadot.network/docs/en/learn-account-generation">wiki.polkadot.network</a></li>
                     <li class="codeContainer">
                         <span class="step">3.</span>
                         <div class="code">
@@ -59,7 +59,7 @@
                 </ul>
                 <h3 class="subtitle is-5">Vedran Daemon</h3>
                 <ul>
-                    <li><span class="step">1.</span> Download latest release: <a href="https://github.com/NodeFactoryIo/vedran-daemon/releases">github.com/NodeFactoryIo/vedran-daemon/releases</a></li>
+                    <li><span class="step">1.</span> Download latest release: <a href="https://github.com/NodeFactoryIo/vedran-daemon/releases">Github</a></li>
                     <li class="codeContainer">
                         <span class="step">2.</span>
                         <div class="code">
@@ -75,8 +75,8 @@
                 <h1>Mac</h1>
                 <h3 class="subtitle is-5">Vedran Load Balancer</h3>
                 <ul>    
-                    <li><span class="step">1.</span> Download latest release from: <a target="_blank" href="https://github.com/NodeFactoryIo/vedran-daemon/releases" >Github</a></li>
-                    <li><span class="step">2.</span>Create polkadot account - <a target="_blank" href="https://wiki.polkadot.network/docs/en/learn-account-generation">wiki.polkadot.network/docs/en/learn-account-generation</a></li>
+                    <li><span class="step">1.</span> Download latest release from: <a target="_blank" href="https://github.com/NodeFactoryIo/vedran/releases" >Github</a></li>
+                    <li><span class="step">2.</span>Create polkadot account - <a target="_blank" href="https://wiki.polkadot.network/docs/en/learn-account-generation">wiki.polkadot.network</a></li>
                     <li class="codeContainer">
                         <span class="step">3.</span>
                         <div class="code">
@@ -87,7 +87,7 @@
                 </ul>
                 <h3 class="subtitle is-5">Vedran Daemon</h3>
                 <ul>
-                    <li><span class="step">1.</span> Download latest release: <a href="https://github.com/NodeFactoryIo/vedran-daemon/releases">github.com/NodeFactoryIo/vedran-daemon/releases</a></li>
+                    <li><span class="step">1.</span> Download latest release: <a href="https://github.com/NodeFactoryIo/vedran-daemon/releases">Github</a></li>
                     <li class="codeContainer">
                         <span class="step">2.</span>
                         <div class="code">
