--- a/src/scss/components/_tabs.scss
+++ b/src/scss/components/_tabs.scss
@@ -4,7 +4,7 @@
     }
     .tab:not(.is-active) {
         a:hover {
-            color: $dark-grey;
+            color: $primary;
         }
     }
 }
