--- a/src/sass/sass/elements/table.sass
+++ b/src/sass/sass/elements/table.sass
@@ -34,7 +34,7 @@ $table-colors: $colors !default
     border: $table-cell-border
     border-width: $table-cell-border-width
     padding: $table-cell-padding
-    vertical-align: top
+    vertical-align: middle
     // Colors
     @each $name, $pair in $table-colors
       $color: nth($pair, 1)
