--- a/src/scss/utilities/_utils.scss
+++ b/src/scss/utilities/_utils.scss
@@ -145,6 +145,17 @@ body {
     padding-bottom: 40px !important;
 }
 
+.pt-20 {
+    padding-top: 20px !important;
+}
+
+.pt-40 {
+    padding-top: 40px !important;
+}
+.pt-100 {
+    padding-top: 100px !important;
+}
+
 //Input placeholders
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
     color: $placeholder;
