--- a/src/partials/setupInstructions.html
+++ b/src/partials/setupInstructions.html
@@ -6,8 +6,8 @@
             <div class="divider is-centered"></div>
 
             <p class="light-text pb-20 pt-20">
-                Help us decentralize infrastructure by either hosting public load balanacer
-                or joining existing one as node operator.
+                Help us decentralize infrastructure by either hosting public load balancer
+                or joining the existing one as a node operator.
             </p>
         </div>
     </div>
@@ -28,10 +28,10 @@
                         <h3 class="subtitle is-4">Vedran Load Balancer</h3>
                         <div class="pb-20" style="margin-left: 0.5rem;">
                             <span class="box is-size-6" style="width: 70%;">
-                                Use this for hosting public endpoint and distributing incomming requests
-                                amongst nodes in it's pool.
-                                You will also be in charge of securing public endpoint and
-                                finding source of funding (ideally chain treasury) to distribute amongst nodes in pool.
+                                Vedran load balancer is providing public endpoint for end users,
+                                distributing request amongst available nodes and doing recurring
+                                payments to node operators based on various metrics and number of requests served.<br/><br/>
+                                Note: you will have to secure funding yourself either trough chain treasuries or other sources of funding
                             </span>
                         </div>
                         <ul>
@@ -57,8 +57,8 @@
                         <h3 class="subtitle is-4">Vedran Daemon</h3>
                         <div class="pb-20" style="margin-left: 0.5rem;">
                             <span class="box is-size-6" style="width: 70%;">
-                                Ran this alongside your Substrate based node to join
-                                to some <a href="#load-balancers">existing load balancer</a> pool.
+                                Vedran daemon is small daemon app that is running alongside your Substrate based node to join
+                                some of the <a href="#load-balancers">existing load balancer</a> pools and receive payments for operating node.
                             </span>
                         </div>
                         <ul>
@@ -89,10 +89,10 @@
                         <h3 class="subtitle is-4">Vedran Load Balancer</h3>
                         <div class="pb-20" style="margin-left: 0.5rem;">
                             <span class="box is-size-6" style="width: 70%;">
-                                Use this for hosting public endpoint and distributing incomming requests
-                                amongst nodes in it's pool.
-                                You will also be in charge of securing public endpoint and
-                                finding source of funding (ideally chain treasury) to distribute amongst nodes in pool.
+                                Vedran load balancer is providing public endpoint for end users,
+                                distributing request amongst available nodes and doing recurring
+                                payments to node operators based on various metrics and number of requests served.<br/><br/>
+                                Note: you will have to secure funding yourself either trough chain treasuries or other sources of funding
                             </span>
                         </div>
                         <ul>
@@ -123,8 +123,8 @@
                         <h3 class="subtitle is-4">Vedran Daemon</h3>
                         <div class="pb-20" style="margin-left: 0.5rem;">
                             <span class="box is-size-6" style="width: 70%;">
-                                Ran this alongside your Substrate based node to join
-                                to some <a href="#load-balancers">existing load balancer</a> pool.
+                                Vedran daemon is small daemon app that is running alongside your Substrate based node to join
+                                some of the <a href="#load-balancers">existing load balancer</a> pools and receive payments for operating node.
                             </span>
                         </div>
                         <ul>
@@ -160,10 +160,10 @@
                         <h3 class="subtitle is-4">Vedran Load Balancer</h3>
                         <div class="pb-20" style="margin-left: 0.5rem;">
                             <span class="box is-size-6" style="width: 70%;">
-                                Use this for hosting public endpoint and distributing incomming requests
-                                amongst nodes in it's pool.
-                                You will also be in charge of securing public endpoint and
-                                finding source of funding (ideally chain treasury) to distribute amongst nodes in pool.
+                                Vedran load balancer is providing public endpoint for end users,
+                                distributing request amongst available nodes and doing recurring
+                                payments to node operators based on various metrics and number of requests served.<br/><br/>
+                                Note: you will have to secure funding yourself either trough chain treasuries or other sources of funding
                             </span>
                         </div>
                         <ul>
@@ -189,8 +189,8 @@
                         <h3 class="subtitle is-4">Vedran Daemon</h3>
                         <div class="pb-20" style="margin-left: 0.5rem;">
                             <span class="box is-size-6" style="width: 70%;">
-                                Ran this alongside your Substrate based node to join
-                                to some <a href="#load-balancers">existing load balancer</a> pool.
+                                Vedran daemon is small daemon app that is running alongside your Substrate based node to join
+                                some of the <a href="#load-balancers">existing load balancer</a> pools and receive payments for operating node.
                             </span>
                         </div>
                         <ul>
